--- a/src/main/resources/assets/hardcoreenderexpansion/lang_ec/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang_ec/en_US.lang
@@ -12,6 +12,7 @@ ec.title.biome.enchantedIsland=Enchanted Island Biome
 ec.title.enderDragon=Ender Dragon
 ec.title.essence=Essence
 ec.title.ravagedDungeon=Ravaged Dungeon
+ec.title.dungeonPuzzle=Dungeon Puzzle
 
 ec.reg.0=Welcome to the Ender Compendium, the source of all knowledge about the End!
 ec.reg.1=The Compendium is divided into phases, each contains blocks, items and mobs you can find in that phase.
@@ -343,7 +344,7 @@ ec.reg.553=Basic Runes increase attributes, such as strength, speed or health. V
 
 ec.reg.560=Fire-oriented biome with huge mountains and a large amount of caves and ores. Apart from default ores, this biome also has common Igneous Rock Ore.
 ec.reg.561=There are 2 variations of the biome - Scorching and Mine.
-ec.reg.562=Scorching variation has large blobs of Cinder, streams and pools of Lava and Lilyfires. This is the only place where Fire Golems and Scorching Lenses spawn.
+ec.reg.562=Scorching variation has large blobs of Cinder, streams and pools of Lava and Lilyfires. Each island also contains a Dungeon Puzzle. This is the only place where Fire Golems and Scorching Lenses spawn.
 ec.reg.563=Mine variation spawns Haunted Miners, which protect Resource Pits (holes with ores from the End and Lava) and long patches of Overworld ores. Not all Overworld ores are present in a single island, usually one or two random ores are missing.
 
 ec.reg.570=Variation of End Stone found in the Burning Mountains Biome.
@@ -351,6 +352,11 @@ ec.reg.570=Variation of End Stone found in the Burning Mountains Biome.
 ec.reg.580=Orange tulip found in the Burning Mountains (Scorching).
 
 ec.reg.590=Rock found in Burning Mountains (Scorching).
+
+ec.reg.900=Dungeon Puzzle is a structure found in Burning Mountains (Scorching). There is always a cave leading to the dungeon.
+ec.reg.901=Throwing Igneous Rock on plain puzzle blocks will start a chain reaction and destroy the rock.
+ec.reg.902=Blocks with ornaments cause different effects when a chain hits them.
+ec.reg.903=When all blocks on the floor are lit, a fiery beam spawns in the middle. Entering the beam begins a Fire Fiend battle.
 
 ec.reg.600=Fiery Essence Altar converts Fiery Essence into heat to speed up Furnaces, Brewing Stands and other devices.
 ec.reg.601=More Fiery Essence causes faster distribution of heat, having 512 Essence yields best speed.
@@ -365,6 +371,15 @@ ec.reg.620=Small biped with a large eye, that spawns in Burning Mountains (Scorc
 ec.reg.621=It attacks players in proximity by churning out fire from its eye.
 ec.reg.622=The fire deals damage, has a chance of knocking the attacked creature back and increases the length of fire status effect.
 ec.reg.623=It drops 0-2 Igneous Rock and 1-2 Fiery Essence.
+
+ec.reg.910=Flying mini-boss spawned by the Dungeon Puzzle. It has 100 hearts.
+ec.reg.911=It moves randomly, but always tries to stay around and above players.
+ec.reg.912=The Fiend switches between two major attacks every couple seconds.
+ec.reg.913=First attack consists of spawning fireballs rotating around the Fiend, and shooting them one by one at random players.
+ec.reg.914=Second attack is less common. It starts by creating fire around the Fiend, and then it deals damage to all players and sets them on fire.
+ec.reg.915=When the mini-boss gets down to 40% health, it will get into the next stage, marked by constant flame around the Fiend.
+ec.reg.916=During that stage, the Fiend's attacks are much quicker, it takes less damage and occasionally it will also make nearby Fire Golems attack players.
+ec.reg.917=On death, it drops 40 experience and 240 Fiery Essence.
 
 ec.reg.630=Fire Shard is a crafting material dropped by Haunted Miners.
 
