--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -87,7 +87,7 @@ item.drySplinter.name=Dry Splinter
 item.infestationRemedy.name=Infestation Remedy
 item.ghostAmulet.name=Ghost Amulet
 item.ghostAmulet.impure.name=Ghost Amulet (Impure)
-item.endoplasm.name=Ectoplasm
+item.ectoplasm.name=Ectoplasm
 item.corporealMirageOrb.name=Corporeal Mirage Orb
 item.bucketEnderGoo.name=Ender Goo Bucket
 item.enderCompendium.name=Ender Compendium
