--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -88,6 +88,8 @@ item.infestationRemedy.name=Infestation Remedy
 item.ghostAmulet.name=Ghost Amulet
 item.ghostAmulet.impure.name=Ghost Amulet (Impure)
 item.ectoplasm.name=Ectoplasm
+item.spectralTear.name=Spectral Tear
+item.livingMatter.name=Living Matter
 item.corporealMirageOrb.name=Corporeal Mirage Orb
 item.bucketEnderGoo.name=Ender Goo Bucket
 item.enderCompendium.name=Ender Compendium
