More curse stuff

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -159,6 +159,7 @@ item.charm.lastresort.name=Charm of Last Resort
 item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 
+item.curse.eternal=Eternal
 item.curse.teleporation=Curse of Teleportation
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
