Fixed compendium category objects disappearing

--- a/src/main/resources/assets/hardcoreenderexpansion/lang_ec/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang_ec/en_US.lang
@@ -12,6 +12,7 @@ ec.title.biome.enchantedIsland=Enchanted Island Biome
 ec.title.enderDragon=Ender Dragon
 ec.title.essence=Essence
 ec.title.ravagedDungeon=Ravaged Dungeon
+ec.title.curses=Curses
 ec.title.dungeonPuzzle=Dungeon Puzzle
 
 ec.reg.0=Welcome to the Ender Compendium, the source of all knowledge about the End!
