More potion abstraction!

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -78,6 +78,8 @@ item.igneousRock.name=Igneous Rock
 item.instabilityOrb.name=Instability Orb
 item.potionOfInstability.name=Potion of Instability
 item.potionOfInstability.splash.name=Splash Potion of Instability
+item.potionOfPurity.name=Potion of Purity
+item.potionOfPurity.splash.name=Splash Potion of Purity
 item.spatialDashGem.name=Spatial Dash Gem
 item.transferenceGem.name=Transference Gem
 item.templeCaller.name=Temple Caller
