Update language files, push mod version

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
@@ -186,30 +186,30 @@ item.charm.slaughterimpact.tooltip=&0 Schaden in einem $1-Blöcke Radius der Tö
 item.charm.cannotstack=Dieses Amulett wird seine Effekte nicht mit\nanderen Amuletten des gleichen Typs stacken!
 entity.hauntedMiner.name=Verhexter Minenarbeiter
 tile.voidChest.name=Void Chest
-tile.endiumOre.name=Endium Ore
+tile.endiumOre.name=Endium Erz
 tile.endiumBlock.name=Endium Block
-tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratory Glass
-item.endiumIngot.name=Endium Ingot
+tile.persegrit.name=Vulkan Gestein
+tile.laboratoryGlass.name=Labor Glas
+item.endiumIngot.name=Endium Barren
 item.knowledgeNote.name=Knowledge Note
-entity.homelandEnderman.name=Homeland Enderman
-energy.overlay.title=ENERGY CLUSTER
-energy.overlay.holding=HOLDING $ ENERGY
-energy.overlay.regen=REGENERATING UP TO $
-energy.status.healthy=HEALTHY
-energy.status.weakened=WEAKENED
-energy.status.tired=TIRED
-energy.status.unstable=UNSTABLE
+entity.homelandEnderman.name=Oberwelt Endermann
+energy.overlay.title=Energie Bündel
+energy.overlay.holding=$ verfügbare Energie
+energy.overlay.regen=regenerierend bis $
+energy.status.healthy=gesund
+energy.status.weakened=schwach
+energy.status.tired=müde
+energy.status.unstable=instabil
 container.voidChest=Void Chest
-key.openCompendium=Ender Compendium
-tile.laboratoryObsidian.name=Laboratory Obsidian
-tile.laboratoryFloor.name=Laboratory Floor
-tile.laboratoryStairs.name=Laboratory Stairs
-item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+key.openCompendium=Ender Kompendium
+tile.laboratoryObsidian.name=Obsidian Labor
+tile.laboratoryFloor.name=Labor Flur
+tile.laboratoryStairs.name=Labor Treppen
+item.ghostAmulet.impure.name=Geisteramulett (verunreinigt)
 item.obsidianFragment.name=Obsidian Fragment
-item.obsidianRod.name=Obsidian Rod
+item.obsidianRod.name=Obsidian Stab
 item.energyWandCore.name=Energy Wand Core
 item.energyWand.name=Energy Wand
 item.auricion.name=Auricion
-item.rune.any.name=Rune (Any)
-entity.endermage.name=Endermage
+item.rune.any.name=Rune (beliebig)
+entity.endermage.name=Ender Magier
