--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
@@ -12,9 +12,9 @@ tile.essenceAltar.dragon.name=Алтарь драконий эссенции
 tile.essenceAltar.fiery.name=Алтарь пламенной эссенции
 tile.essenceAltar.spectral.name=Алтарь спектральной эссенции
 tile.endPowderOre.name=Руда порошка Края
-tile.stardustOre.name=Руда звёздной пыли
-tile.igneousRockOre.name=Руда магматической породы
-tile.instabilityOrbOre.name=Руда сферы нестабильности
+tile.stardustOre.name=Звёздная руда
+tile.igneousRockOre.name=Раскалённая порода
+tile.instabilityOrbOre.name=Нестабильная порода
 tile.enderGoo.name=Слизь Края
 tile.endStoneTerrain.infested.name=Заражённый камень Края
 tile.endStoneTerrain.burned.name=Сожжённый камень Края
@@ -94,7 +94,7 @@ tile.ravagedBrick.name=Разрушенный кирпич
 tile.energyCluster.name=Энергетический кластер
 container.enhancedBrewing=Улучшенная варочная стойка
 container.decompositionTable=Стол разложения
-container.energyExtractionTable=Стол извлечения энергии
+container.energyExtractionTable=Извлекающий стол
 tile.sphalerite.name=Сфалерит
 tile.sphalerite.stardust.name=Сфалерит с звёздной пылью
 item.spatialDashGem.name=Самоцвет пространственного рывка
@@ -115,7 +115,7 @@ achievement.rebirth=Возрождение
 achievement.learningThePowers.desc=Сделайте алтарь драконий эссенции
 container.endPowderEnhancements=Зачарования порошком Края
 achievement.theMoreYouKnow=Чем больше Вы знаете
-achievement.theMoreYouKnow.desc=Сделайте компендиум Края
+achievement.theMoreYouKnow.desc=Нажмите "%1$s" для открытия Эндер компедиума
 tile.crossedDecoration.violetMoss.tall.name=Высокий фиолетовый мох
 tile.crossedDecoration.violetMoss.moderate.name=Средний фиолетовый мох
 tile.crossedDecoration.violetMoss.short.name=Короткий фиолетовый мох
@@ -153,16 +153,16 @@ item.charm.criticalstrike.name=Амулет критического удара
 item.charm.seconddurability.name=Амулет вторичной прочности
 item.charm.voidrescue.name=Амулет спасения из пустоты
 item.charm.slaughterimpact.name=Амулет уменьшения импульса
-item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
-item.charm.lastresort.name=Charm of Last Resort
-item.charm.magicdefense.tooltip=-$0 magic damage taken
-item.charm.magicdefense.name=Charm of Magic Defense
+item.charm.lastresort.tooltip=Телепортирует на $0 блоков после получения удара, с задержкой в $1 секунд
+item.charm.lastresort.name=Амулет последней надежды
+item.charm.magicdefense.tooltip=-$0 магического урона по вам
+item.charm.magicdefense.name=Амулет магической защиты
 entity.louse.name=Вошь
 container.charmPouch=Чехол для амулета
 container.runeCrafting=Создание руны
-item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
-item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
-item.fireShard.name=Fire Shard
+item.charm.blockingrepulsion.tooltip=-$0 получаемого урона и $1 сопротивляемости отталкиванию
+item.charm.blockingrepulsion.name=Амулет стойкости
+item.fireShard.name=Огненный осколок
 item.charm.basicpower.tooltip=+$0 урона
 item.charm.basicagility.tooltip=+$0 скорости
 item.charm.basicvigor.tooltip=+$0 скорости регенерации здоровья
@@ -171,45 +171,45 @@ item.charm.basicmagic.tooltip=+$0 опыта
 item.charm.equality.tooltip=+$0 урона\n+$1 скорости\n+$2 скорости регенерации здоровья\n-$3 получения урона\n+$4 опыта
 item.charm.blocking.tooltip=-$0 получения урона, при блокировании
 item.charm.blockingreflection.tooltip=-$0 получения урона и $1 отражения урона, при блокировании
-item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
-item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
-item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
-item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
-item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.digestiverecover.tooltip=$0 здоровья получено на 1 единицу голода
+item.charm.lifesteal.tooltip=$0 здоровья получено на $1 отнятого
+item.charm.damageredirection.tooltip=$0 урона по $1 существам
+item.charm.magicpenetration.tooltip=$0 дополнительного магического урона вы наносите
+item.charm.witcheryharm.tooltip=$0 шанс вызвать эффект $1 на $2 секунды
 item.charm.witcherydefense.tooltip=
-item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.fallingprotection.tooltip=+$0 блоков
 item.charm.haste.tooltip=+$0 скорости копания
 item.charm.criticalstrike.tooltip=Шанс $0, нанесения $1 критического урона 
-item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.seconddurability.tooltip=$0 шанс восстановить $1 прочности
 item.charm.voidrescue.tooltip=
-item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
-item.charm.cannotstack=This charm will not stack effects with other charms of this type!
-entity.hauntedMiner.name=Haunted Miner
-tile.voidChest.name=Void Chest
-tile.endiumOre.name=Endium Ore
-tile.endiumBlock.name=Endium Block
-tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratory Glass
-item.endiumIngot.name=Endium Ingot
-item.knowledgeNote.name=Knowledge Note
+item.charm.slaughterimpact.tooltip=$0 нанесётся в радиусе $1 от убийства
+item.charm.cannotstack=Эффект от этого амулета не складывается с амулетами такого же типа
+entity.hauntedMiner.name=Призрачный шахтёр
+tile.voidChest.name=Вакуумный сундук
+tile.endiumOre.name=Эндиум
+tile.endiumBlock.name=Блок эндиума
+tile.persegrit.name=Персегрит
+tile.laboratoryGlass.name=Лабораторное стекло
+item.endiumIngot.name=Слиток эндиума
+item.knowledgeNote.name=Фрагмент знаний
 entity.homelandEnderman.name=Homeland Enderman
-energy.overlay.title=ENERGY CLUSTER
-energy.overlay.holding=HOLDING $ ENERGY
-energy.overlay.regen=REGENERATING UP TO $
-energy.status.healthy=HEALTHY
-energy.status.weakened=WEAKENED
-energy.status.tired=TIRED
-energy.status.unstable=UNSTABLE
-container.voidChest=Void Chest
-key.openCompendium=Ender Compendium
-tile.laboratoryObsidian.name=Laboratory Obsidian
-tile.laboratoryFloor.name=Laboratory Floor
-tile.laboratoryStairs.name=Laboratory Stairs
-item.ghostAmulet.impure.name=Ghost Amulet (Impure)
-item.obsidianFragment.name=Obsidian Fragment
-item.obsidianRod.name=Obsidian Rod
-item.energyWandCore.name=Energy Wand Core
-item.energyWand.name=Energy Wand
-item.auricion.name=Auricion
-item.rune.any.name=Rune (Any)
-entity.endermage.name=Endermage
+energy.overlay.title=Энергетический кластер
+energy.overlay.holding=Удерживание $ энергии
+energy.overlay.regen=Регенерация $
+energy.status.healthy=Здоровье
+energy.status.weakened=Слабость
+energy.status.tired=Утомление
+energy.status.unstable=Нестабильность
+container.voidChest=Вакуумный сундук
+key.openCompendium=Компедиум Края
+tile.laboratoryObsidian.name=Лабораторный обсидиан
+tile.laboratoryFloor.name=Лабораторный пол
+tile.laboratoryStairs.name=Лабораторные ступеньки
+item.ghostAmulet.impure.name=Неочищенный амулет призрака
+item.obsidianFragment.name=Обсидиановый кусок
+item.obsidianRod.name=Обсидиановый стержень
+item.energyWandCore.name=Энергетическое ядро посоха
+item.energyWand.name=Энергетический посох
+item.auricion.name=Аурикон
+item.rune.any.name=Любая руна
+entity.endermage.name=Эндермаг
