--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -187,18 +187,26 @@ entity.enderEye.name=Ender Eye
 entity.fireFiend.name=Fire Fiend
 entity.enderDemon.name=Ender Demon
 entity.angryEnderman.name=Angry Enderman
+entity.angryEnderman.bacon.name=Angry Baconman
 entity.babyEnderman.name=Baby Enderman
+entity.babyEnderman.bacon.name=Baby Baconman
 entity.brainlessEnderman.name=Paralyzed Enderman
+entity.brainlessEnderman.bacon.name=Paralyzed Baconman
 entity.homelandEnderman.name=Homeland Enderman
+entity.homelandEnderman.bacon.name=Homeland Baconman
 entity.enderGuardian.name=Ender Guardian
+entity.enderGuardian.bacon.name=Bacon Guardian
 entity.vampireBat.name=Vampire Bat
+entity.vampireBat.bacon.name=Vampire Bacon
 entity.infestedBat.name=Infested Bat
+entity.infestedBat.bacon.name=Infested Bacon
 entity.forestGhost.name=Ghost
 entity.fireGolem.name=Fire Golem
 entity.scorchingLens.name=Scorching Lens
 entity.louse.name=Louse
 entity.hauntedMiner.name=Haunted Miner
 entity.endermage.name=Endermage
+entity.endermage.bacon.name=Baconmage
 
 energy.overlay.title=ENERGY CLUSTER
 energy.overlay.holding=HOLDING $ ENERGY
@@ -219,9 +227,11 @@ container.charmPouch=Charm Pouch
 container.runeCrafting=Rune Crafting
 
 key.openCompendium=Ender Compendium
+key.openCompendium.bacon=Bacon Compendium
 
 achievement.theMoreYouKnow=The more you know
 achievement.theMoreYouKnow.desc=Press '%1$s' to open Ender Compendium
+achievement.theMoreYouKnow.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.newAdventures=Time for new adventures!
 achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
 achievement.learningThePowers=Learning the powers
