TSS fixes and updates

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -19,11 +19,13 @@ tile.energyExtractionTable.name=Energy Extraction Table
 tile.endPowderOre.name=End Powder Ore
 tile.endPowderOre.bacon.name=Bacon Powder Ore
 tile.endiumOre.name=Endium Ore
+tile.endiumOre.bacon.name=Baconium Ore
 tile.stardustOre.name=Stardust Ore
 tile.igneousRockOre.name=Igneous Rock Ore
 tile.instabilityOrbOre.name=Instability Orb Ore
 tile.enderGoo.name=Ender Goo
 tile.endiumBlock.name=Endium Block
+tile.endiumBlock.bacon.name=Baconium Block
 tile.endStoneTerrain.infested.name=Infested End Stone
 tile.endStoneTerrain.burned.name=Burned End Stone
 tile.endStoneTerrain.enchanted.name=Enchanted End Stone
@@ -32,6 +34,7 @@ tile.spookyLeaves.name=Spooky Leaves
 tile.soulCharm.name=Soul Charm
 tile.emptySoulCharm.name=Soul Charm Receptacle
 tile.endFlower.name=Death Flower
+tile.endFlower.bacon.name=Death Bacon
 tile.crossedDecoration.thornyBush.name=Thorny Bush
 tile.crossedDecoration.infestedFern.name=Infested Fern
 tile.crossedDecoration.infestedBush.name=Infested Bush
@@ -75,11 +78,13 @@ item.essence.dragon.bacon.name=Bacon Essence
 item.essence.fiery.name=Fiery Essence
 item.essence.spectral.name=Spectral Essence
 item.lorePage.name=Adventurer's Diary
+item.lorePage.bacon.name=Adventurer's Bacon
 item.altarNexus.name=Altar Nexus
 item.altarNexus.bacon.name=Bacon Nexus
 item.endPowder.name=End Powder
 item.endPowder.bacon.name=Bacon Powder
 item.endiumIngot.name=Endium Ingot
+item.endiumIngot.bacon.name=Baconium Ingot
 item.stardust.name=Stardust
 item.igneousRock.name=Igneous Rock
 item.instabilityOrb.name=Instability Orb
@@ -94,18 +99,23 @@ item.templeCaller.bacon.name=Bacon Caller
 item.biomeCompass.name=Biome Compass
 item.silverfishBlood.name=Silverfish Blood
 item.drySplinter.name=Dry Splinter
+item.drySplinter.bacon.name=Dry Bacon
 item.infestationRemedy.name=Infestation Remedy
 item.ghostAmulet.name=Ghost Amulet
 item.ghostAmulet.impure.name=Ghost Amulet (Impure)
 item.ectoplasm.name=Ectoplasm
 item.spectralTear.name=Spectral Tear
+item.spectralTear.bacon.name=Spectral Bacon
 item.livingMatter.name=Living Matter
+item.livingMatter.bacon.name=Living Bacon
 item.corporealMirageOrb.name=Corporeal Mirage Orb
 item.bucketEnderGoo.name=Ender Goo Bucket
 item.enderCompendium.name=Ender Compendium
 item.knowledgeNote.name=Knowledge Note
+item.knowledgeNote.bacon.name=Bacon of Knowledge
 item.enhancedBrewingStand.name=Enhanced Brewing Stand
 item.scorchingPickaxe.name=Scorching Pickaxe
+item.scorchingPickaxe.bacon.name=Scorching Bacon
 item.fireShard.name=Fire Shard
 item.obsidianFragment.name=Obsidian Fragment
 item.obsidianRod.name=Obsidian Rod
@@ -187,6 +197,7 @@ entity.dragon.bacon.name=Ender Bacon
 entity.enderEye.name=Ender Eye
 entity.fireFiend.name=Fire Fiend
 entity.enderDemon.name=Ender Demon
+entity.enderman.bacon.name=Baconman
 entity.angryEnderman.name=Angry Enderman
 entity.angryEnderman.bacon.name=Angry Baconman
 entity.babyEnderman.name=Baby Enderman
