--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -16,6 +16,7 @@ tile.essenceAltar.spectral.name=Spectral Essence Altar
 tile.voidChest.name=Void Chest
 tile.decompositionTable.name=Decomposition Table
 tile.energyExtractionTable.name=Energy Extraction Table
+tile.experienceTable.name=Experience Table
 tile.endPowderOre.name=End Powder Ore
 tile.endPowderOre.bacon.name=Bacon Powder Ore
 tile.endiumOre.name=Endium Ore
@@ -234,6 +235,7 @@ container.enhancedBrewing=Enhanced Brewing Stand
 container.voidChest=Void Chest
 container.decompositionTable=Decomposition Table
 container.energyExtractionTable=Energy Extraction Table
+container.experienceTable=Experience Table
 container.endPowderEnhancements=End Powder Enhancements
 container.charmPouch=Charm Pouch
 container.runeCrafting=Rune Crafting
