Transport Beacon appearance finished

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -13,6 +13,8 @@ tile.essenceAltar.dragon.name=Dragon Essence Altar
 tile.essenceAltar.dragon.bacon.name=Bacon Essence Altar
 tile.essenceAltar.fiery.name=Fiery Essence Altar
 tile.essenceAltar.spectral.name=Spectral Essence Altar
+tile.transportBeacon.name=Transport Beacon
+tile.transportBeacon.bacon.name=Transport Bacon
 tile.voidChest.name=Void Chest
 tile.decompositionTable.name=Decomposition Table
 tile.energyExtractionTable.name=Energy Extraction Table
