Started working on Accumulation Table

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -17,8 +17,9 @@ tile.transportBeacon.name=Transport Beacon
 tile.transportBeacon.bacon.name=Transport Bacon
 tile.voidChest.name=Void Chest
 tile.decompositionTable.name=Decomposition Table
-tile.energyExtractionTable.name=Energy Extraction Table
 tile.experienceTable.name=Experience Table
+tile.accumulationTable.name=Accumulation Table
+tile.energyExtractionTable.name=Energy Extraction Table
 tile.endPowderOre.name=End Powder Ore
 tile.endPowderOre.bacon.name=Bacon Powder Ore
 tile.endiumOre.name=Endium Ore
@@ -236,8 +237,9 @@ namegenerator.middle=, the
 container.enhancedBrewing=Enhanced Brewing Stand
 container.voidChest=Void Chest
 container.decompositionTable=Decomposition Table
-container.energyExtractionTable=Energy Extraction Table
 container.experienceTable=Experience Table
+container.accumulationTable=Accumulation Table
+container.energyExtractionTable=Energy Extraction Table
 container.endPowderEnhancements=End Powder Enhancements
 container.endPowderEnhancements.bacon=Bacon Powder Enhancements
 container.charmPouch=Charm Pouch
