Table redstone signal, Extraction table work, AT'd sky biome

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -19,7 +19,7 @@ tile.voidChest.name=Void Chest
 tile.decompositionTable.name=Decomposition Table
 tile.experienceTable.name=Experience Table
 tile.accumulationTable.name=Accumulation Table
-tile.energyExtractionTable.name=Energy Extraction Table
+tile.extractionTable.name=Extraction Table
 tile.endPowderOre.name=End Powder Ore
 tile.endPowderOre.bacon.name=Bacon Powder Ore
 tile.endiumOre.name=Endium Ore
@@ -239,7 +239,7 @@ container.voidChest=Void Chest
 container.decompositionTable=Decomposition Table
 container.experienceTable=Experience Table
 container.accumulationTable=Accumulation Table
-container.energyExtractionTable=Energy Extraction Table
+container.extractionTable=Extraction Table
 container.endPowderEnhancements=End Powder Enhancements
 container.endPowderEnhancements.bacon=Bacon Powder Enhancements
 container.charmPouch=Charm Pouch
