Fixed powder and texture stuff

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -112,6 +112,7 @@ item.spectralTear.name=Spectral Tear
 item.spectralTear.bacon.name=Spectral Bacon
 item.livingMatter.name=Living Matter
 item.livingMatter.bacon.name=Living Bacon
+item.curseAmulet.name=Curse Amulet
 item.corporealMirageOrb.name=Corporeal Mirage Orb
 item.bucketEnderGoo.name=Ender Goo Bucket
 item.enderCompendium.name=Ender Compendium
