--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -144,7 +144,7 @@ ec.reg.220=Small blobs of varying shapes, sizes and features, made of End Stone.
 ec.reg.221=There are three types of blobs, Common, Uncommon and Rare.
 ec.reg.222=Common blobs are the most random. They can have a variety of shapes, and 1 to 7 populators that include caves, Obsidian spikes and cover, Ender Goo lakes and falls, End Powder and Igneous Rock ores and Death Flower.
 ec.reg.223=Uncommon blobs have predetermined shapes and populators, such as one tiny blob with large amount of End Powder, goo covered one with a chest inside, caterpillar shaped one and several more.
-ec.reg.224=Rare blobs have precious resources and utilities and are usually very distinguishable from other types. Currently they only spawn Transport Beacons.
+ec.reg.224=Rare blobs have precious resources and utilities and are usually very distinguishable from other types. They can spawn Transport Beacons, spawners with loot and large blobs filled with ores.
 
 ec.reg.230=An ore rarely spawned in Endstone Blobs and commonly in Burning Moutains Biome.
 ec.reg.231=Iron Pickaxe or better can effectively mine the ore.
@@ -165,6 +165,11 @@ ec.reg.260=Extremely hot rock dropped by the Igneous Rock Ore.
 ec.reg.261=When held, it has a chance of setting the holder on fire. The effect is strengthened in the Nether and partially suppressed in the End.
 ec.reg.262=It is a very efficient fuel, roughly 3 times better than Blaze Rods.
 ec.reg.263=When thrown on the ground, it spreads fire, smelts blocks, burns creatures and causes TNT to instantly explode. The rock also quickly dissolves.
+
+ec.reg.960=Transport Beacon allows teleportation between other nearby Beacons you discovered.
+ec.reg.961=They spawn in one of the rare Endstone Blob varieties, and emit a bright vertical beam.
+ec.reg.962=Teleportation consumes Energy, which should suffice until the next phase where you learn more about Energy.
+ec.reg.963=Maximum teleportation distance is 960 blocks.
 
 ec.reg.270=A tall tower consisting of various types of Obsidian.
 ec.reg.271=They start spawning around 350 blocks away from the Dragon Lair.
@@ -246,6 +251,19 @@ ec.reg.882=It requires Stardust and Energy to run, price increases with complexi
 ec.reg.883=Not all ingredients are returned, but up to 84% of them are retrievable.
 ec.reg.884=Damaged items yield less ingredients than fully repaired ones.
 ec.reg.885=If multiple recipes exist, one is chosen randomly.
+
+ec.reg.970=A table that extracts experience from blocks.
+ec.reg.972=It requires Stardust and Energy to run, it always runs at the same speed.
+ec.reg.973=The table yields triple the amount of experience, and destroys the block in the process.
+
+ec.reg.980=A table that stores Energy and channels it into items.
+ec.reg.982=Breaking the Table causes the stored Energy to leak into the world.
+
+ec.reg.990=A table that extracts Energy from blocks and items from the End.
+ec.reg.992=It requires Stardust and Energy from a different source to run.
+ec.reg.993=Stored Energy leaks out into the environment and nearby Energy Clusters.
+ec.reg.994=Leaking can be slowed down or stopped by placing Instability Orbs into the Table.
+ec.reg.995=Breaking the Table causes the stored Energy to leak into the world.
 
 ec.reg.720=Biome Islands are large islands made of End Stone, that start spawning roughly 1600 blocks away from the Dragon Lair.
 ec.reg.721=Each island has caves and ores, every biome modifies the amounts and rates as well as the overall shape of the terrain.
