--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -121,7 +121,8 @@ item.knowledgeNote.bacon.name=Bacon of Knowledge
 item.enhancedBrewingStand.name=Enhanced Brewing Stand
 item.scorchingPickaxe.name=Scorching Pickaxe
 item.scorchingPickaxe.bacon.name=Scorching Bacon
-item.fireShard.name=Fire Shard
+item.infernium.name=Infernium
+item.arcaneShard.name=Arcane Shard
 item.obsidianFragment.name=Obsidian Fragment
 item.obsidianRod.name=Obsidian Rod
 item.energyWandCore.name=Energy Wand Core
